--- a/front-end/lucienstore/public/manifest.json
+++ b/front-end/lucienstore/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Lucien Store",
+  "name": "Lucien Store",
   "icons": [
     {
       "src": "favicon.ico",
