--- a/.github/workflows/main_lucienstore.yml
+++ b/.github/workflows/main_lucienstore.yml
@@ -22,7 +22,7 @@ jobs:
           java-version: '17'
 
       - name: Navigate to Backend Directory
-        run: cd backend/lucienstore
+        run: cd back-end/lucienstore
 
       - name: Build with Maven
         run: mvn clean install
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/backend/lucienstore/target/*.jar'
+          path: '${{ github.workspace }}/back-end/lucienstore/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
