--- a/.github/workflows/main_lucienstore.yml
+++ b/.github/workflows/main_lucienstore.yml
@@ -13,7 +13,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./back-end/lucienstore
     steps:
       - uses: actions/checkout@v4
 
