--- a/.github/workflows/main_lucienstore.yml
+++ b/.github/workflows/main_lucienstore.yml
@@ -24,8 +24,6 @@ jobs:
         with:
           java-version: '17'
 
-      - name: Navigate to Backend Directory
-        run: cd back-end/lucienstore
 
       - name: Build with Maven
         run: mvn clean install
@@ -34,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/back-end/lucienstore/target/*.jar'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
