--- a/front-end/lucienstore/package.json
+++ b/front-end/lucienstore/package.json
@@ -20,6 +20,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
